trying to prevent x-overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+body, html {
+  overflow-x: hidden;
+}
+
+img, svg {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
 .app-background {
   background: linear-gradient(to right, #e4d9d4, #d6a6a3, #a17768);
   min-height: 100vh; /* ensures it fills the whole screen */
