--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -11,3 +11,9 @@
   font-weight: 400;
   font-style: normal;
 }
+
+img, svg {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
